test/type-error-2.err.expect
test/type-error-2.ktn:3:1: error: cannot solve scalar type constraint [t1] = int
test/type-error-2.ktn:3:9: note: int is from here
test/type-error-2.ktn:4:12: note: [t1] is from here
